登录，注册，修改密码，验证码 --张子腾 html界面完成 jquery还有少许

--- a/src/pages/common/header.html
+++ b/src/pages/common/header.html
@@ -14,7 +14,7 @@
             </div>
             <ul class="nav nav-pills header-navbar">
                 <li class="user-logout">
-                    <span href="#">退出</span>
+                    <a href="../login/login.html" style="margin:0;padding:0"><span href="#">退出</span></a>
                 </li>
                 <li class="role-line">|</li>
                 <li class="user-role">
