--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -10,7 +10,7 @@
     <title>登录页面</title>
 </head>
 <body id="login-body">
-    <!--项目登录页面-->
+    <!--考生登录子系统项目登录页面 张子腾 2018年10月9日10:22:50-->
     <div class="catrc-container">
             <div class="row">
                 <div class="login-box">
@@ -18,28 +18,41 @@
                         <a href="index.html"><i class="halflings-icon home"></i></a>
                         <a href="#"><i class="halflings-icon cog"></i></a>
                     </div>
-                    <h3 class="text-center">欢迎登录EPC系统</h3>
+                    <h3 class="text-center">欢迎登录考试系统</h3>
                     <form class="form-horizontal" method="post">
                         <fieldset>
-
+                            <!--用户名-->
                             <div class="input-group" title="Username">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                <input class="input-sm" name="username" id="username" type="text" placeholder="type username"/>
+                                <input class="input-sm" name="username" maxlength="12" id="username" type="text" placeholder="请输入用户名"/>
                             </div>
                             <div class="clearfix"></div>
-
+                            <!--密码-->
                             <div class="input-group" title="Password">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                <input class="input-sm" name="password" id="password" type="password" placeholder="type password"/>
+                                <input class="input-sm" name="password" maxlength="12" id="password" type="password" placeholder="请输入密码"/>
                             </div>
                             <div class="clearfix"></div>
-
-                            <div class="remember" for="remember">
-                                <input type="checkbox" id="remember" />
-                                Remember me
+                            <!--验证码-->
+                                <div class="input-group" title="Captchac" style="width: 75%;float: left">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-qrcode"></i></span>
+                                    <input class="input-sm" name="captchac" maxlength="4" id="captchac" type="text" placeholder="请输入验证码"/>
+                                </div>
+                                <div id="idcode" class="login-row">
+                                    <!--<img border=0 src="" id="imageLoginCode" onclick="loginCodeReload()" class="col-xs-5" style="width: 100%;height:33px;">-->
+                                </div>
+                            <div class="clearfix"></div>
+                            <!--修改密码按钮-->
+                            <div class="remember-left" for="remember">
+                                <a href="#" check-area="update-point-info" data-target="#update-point-nothing" data-toggle="modal" style="color: #2b669a">修改密码</a>
                             </div>
-                            <div class="button-login text-center">
-                                <button type="button" onclick="window.location.href='../default/default.html'" class="btn btn-primary">Login</button>
+                            <!--注册按钮-->
+                            <div class="remember" for="remember">
+                                <a href="#" check-area="add-point-info" data-target="#add-point-nothing" data-toggle="modal" style="color: #2b669a">没有账号,点击注册</a>
+                            </div>
+
+                            <div class="button-login text-center" style="margin-top: 40px;">
+                                <button type="button" onclick="window.location.href='../default/default.html'" class="btn btn-primary" style="width: 100px">登录</button>
                             </div>
                             <div class="clearfix"></div>
                         </fieldset>
@@ -47,7 +60,118 @@
                 </div><!--/span-->
             </div><!--/row-->
         </div><!--/.fluid-container-->
+
+    <!--注册模态窗-->
+    <div class="modal fade" id="add-point-nothing">
+        <div class="modal-dialog" role="document" style="width: 400px">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h3 id="modelTitle-nothing">注册</h3>
+                </div>
+                <div class="modal-body">
+                    <div class="row" style="margin: 0 auto">
+                        <div class="col-xs-12 form-horizontal" id="add-point-info">
+                            <div class="form-group">
+                                <div class="col-sm-12 form-inline">
+                                    <label for="ProblemType" class="col-sm-4 control-label required">准考证号：</label>
+                                    <input type="text" class="form-control need-check not-null" style="width: 200px;" regex="account" maxlength="12" id="ProblemType" placeholder="请输入准考证号">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-12 form-inline">
+                                    <label for="inputNumber" class="col-sm-4 control-label required">登录账户：</label>
+                                    <input type="text" class="form-control need-check not-null" style="width: 200px;" regex="account" maxlength="12" id="inputNumber" placeholder="请输入账户名">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-12 form-inline">
+                                    <label for="inputProblem" class="col-sm-4 control-label required">密码：</label>
+                                    <input type="text" class="form-control need-check not-null" style="width: 200px;" regex="account" maxlength="12" id="inputProblem" placeholder="请输入密码">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-12 form-inline">
+                                    <label for="inputProblem" class="col-sm-4 control-label">邮箱：&nbsp;</label>
+                                    <input type="text" class="form-control need-check not-null" style="width: 200px;" regex="account" maxlength="20" id="inputProblem" placeholder="请输入邮箱">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-12 form-inline">
+                                    <label for="inputProblem" class="col-sm-4 control-label">手机号：&nbsp;</label>
+                                    <input type="text" class="form-control need-check not-null" style="width: 200px;" regex="account" maxlength="11" id="inputProblem" placeholder="请输入手机号">
+                                </div>
+                            </div>
+                            <!--验证码-->
+                            <div class="form-group">
+                                <div class="col-sm-12 form-inline">
+                                    <label for="inputProblem" class="col-sm-4 control-label">验证码：&nbsp;</label>
+                                    <input type="text" class="form-control need-check not-null" style="width: 150px;" regex="account" maxlength="4" id="inputProblem" placeholder="请输入验证码">
+                                </div>
+                                <div id="idcode" class="login-row">
+                                    <!--<img border=0 src="" id="imageLoginCode" onclick="loginCodeReload()" class="col-xs-5" style="width: 100%;height:33px;">-->
+                                </div>
+                            </div>
+
+                            <div class="modal-footer" style="text-align: center">
+                                <!--<button class="btn" data-dismiss="modal">取消</button>-->
+                                <button class="btn btn-success save-check" style="width: 200px;">注册</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--修改密码模态框-->
+    <div class="modal fade" id="update-point-nothing">
+        <div class="modal-dialog" role="document" style="width: 400px">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h3 id="modelTitle-nothing">修改密码</h3>
+                </div>
+                <div class="modal-body">
+                    <div class="row" style="margin: 0 auto">
+                        <div class="col-xs-12 form-horizontal" id="update-point-info">
+
+                            <div class="form-group">
+                                <div class="col-sm-12 form-inline">
+                                    <label for="inputNumber" class="col-sm-5 control-label required">账户原密码：</label>
+                                    <input type="text" class="form-control need-check not-null" style="width: 150px;" regex="account" maxlength="12" id="inputNumber" placeholder="请输入原密码">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-12 form-inline">
+                                    <label for="inputProblem" class="col-sm-5 control-label">新密码：</label>
+                                    <input type="text" class="form-control need-check not-null" style="width: 150px;" regex="account" maxlength="12" id="inputProblem" placeholder="请输入新密码">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-12 form-inline">
+                                    <label for="inputProblem" class="col-sm-5 control-label">确认新密码：</label>
+                                    <input type="text" class="form-control need-check not-null" style="width: 150px;" regex="account" maxlength="12" id="inputProblem" placeholder="请确认新密码">
+                                </div>
+                            </div>
+                            <div class="modal-footer" style="text-align: center">
+                                <!--<button class="btn" data-dismiss="modal">取消</button>-->
+                                <button class="btn btn-success save-check" style="width: 200px;">确认</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--**************JS部分************-->
     <script src="../../lib/js/jquery.min.js"></script>
     <script src="../../lib/bootstrap/js/bootstrap.min.js"></script>
+<script src="../../js/login/login.js"></script>
 </body>
 </html>
