qitian commit 'common.css'

--- a/src/pages/personal-center/personal.html
+++ b/src/pages/personal-center/personal.html
@@ -48,7 +48,7 @@
                                                     <!--need-check:需要被验证-->
                                                     <!--not-null:不可为空-->
                                                     <!--绑定regex属性，值为:对应的正则key值-->
-                                                    <input type="text" class="form-control need-check not-null" regex="account" maxlength="15" id="inputName" placeholder="请输入姓名">
+                                                    <input type="text" class="form-control need-check not-null" regex="account IDNumber" maxlength="15" id="inputName" placeholder="请输入姓名">
                                                    <!--并且必须在表单项紧挨着的下方添加如下标签-->
                                                     <span class="alert-warn"></span>
                                                 </div>
