--- a/src/pages/release-manage/release-manage.html
+++ b/src/pages/release-manage/release-manage.html
@@ -22,7 +22,7 @@
             <div class="select-input">
                 <label class="form-inline">
                     <span>学校：</span>
-                    <select id="school-select" class="form-control">
+                    <select id="search-select-school" class="form-control">
                         <option value="-1">请选择</option>
                         <option value="1">学校1</option>
                         <option value="2">学校2</option>
@@ -31,7 +31,7 @@
                 </label>
                 <label class="form-inline">
                     <span>省份：</span>
-                    <select id="province-select" class="form-control">
+                    <select id="search-select-province" class="form-control">
                         <option value="-1">请选择</option>
                         <option value="1">省份1</option>
                         <option value="2">省份2</option>
@@ -41,7 +41,7 @@
                 </label>
                 <label class="form-inline">
                     <span>专业：</span>
-                    <select id="major-select" class="form-control">
+                    <select id="search-select-major" class="form-control">
                         <option value="-1">请选择</option>
                         <option value="1">专业1</option>
                         <option value="2">专业2</option>
@@ -87,7 +87,7 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label ">下线时间：</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control" id="offlinetime" placeholder="发布时间">
+                                <input type="text" class="form-control" id="release-input-offlinetime" placeholder="发布时间">
 
                                 <span class="alert-warn"></span>
                             </div>
