--- a/src/pages/user-manage/user-manage.html
+++ b/src/pages/user-manage/user-manage.html
@@ -23,12 +23,12 @@
             <div class="select-input">
                 <label class="form-inline">
                     <span>账户：</span>
-                    <input id="account-select" type="text" class="form-control" style="width: 150px;">
+                    <input id="search-input-account" type="text" class="form-control" style="width: 150px;">
                 </label>
                 <label class="form-inline">
                     <span>状态：</span>
-                    <input type="radio" class="" name="select-radio-status" value="0">启用
-                    <input type="radio" class="" name="select-radio-status" value="1">停用
+                    <input type="radio" class="" name="search-radio-status" value="0">启用
+                    <input type="radio" class="" name="search-radio-status" value="1">停用
                 </label>
             </div>
 
