代码规范修改2

--- a/src/pages/matriculate-manage/matriculate-manage.html
+++ b/src/pages/matriculate-manage/matriculate-manage.html
@@ -11,13 +11,16 @@
 </head>
 <body>
 <!--录取管理 刘志杰 2018-10-11-->
+<ol class="breadcrumb">
+    <li><a href="#">后台管理系统</a></li>
+    <li class="active">录取管理</li>
+</ol>
 <div class="content-box">
-    <div class="header-section">
-        <div class="title-header">录取管理</div>
+    <div class="page-header">
+        <h3>录取管理</h3>
     </div>
     <div class="content-section">
         <div class="select-section">
-            <div class="h3">信息查询</div>
             <div class="select-input" style="width: 1050px;">
                 <label class="form-inline">
                     <span>学校：</span>
