--- a/src/pages/user-manage/user-manage.html
+++ b/src/pages/user-manage/user-manage.html
@@ -11,15 +11,17 @@
 </head>
 <body>
 <!--用户管理 刘志杰 2018-10-09-->
-
+<ol class="breadcrumb">
+    <li><a href="#">后台管理系统</a></li>
+    <li class="active">用户管理</li>
+</ol>
 <div class="content-box">
-    <div class="header-section">
-        <div class="title-header">用户管理</div>
+    <div class="page-header">
+        <h3>用户管理</h3>
     </div>
     <div class="content-section">
         <!--查询-->
         <div class="select-section">
-            <div class="h3">信息查询</div>
             <div class="select-input">
                 <label class="form-inline">
                     <span>账户：</span>
