--- a/src/pages/release-manage/release-manage.html
+++ b/src/pages/release-manage/release-manage.html
@@ -11,14 +11,17 @@
 </head>
 <body>
 <!--发布管理 刘志杰 2018-10-10 -->
+<ol class="breadcrumb">
+    <li><a href="#">后台管理系统</a></li>
+    <li class="active">发布管理</li>
+</ol>
 <div class="content-box">
-    <div class="header-section">
-        <div class="title-header">发布管理</div>
+    <div class="page-header">
+        <h3>发布管理</h3>
     </div>
     <div class="content-section">
         <!--查询-->
         <div class="select-section">
-            <div class="h3">信息查询</div>
             <div class="select-input">
                 <label class="form-inline">
                     <span>学校：</span>
