--- a/src/pages/user-manage/user-manage.html
+++ b/src/pages/user-manage/user-manage.html
@@ -22,29 +22,35 @@
     <div class="content-section">
         <!--查询-->
         <div class="select-section">
-            <div class="select-input">
-                <label class="form-inline">
-                    <span>账户：</span>
-                    <input id="search-input-account" type="text" class="form-control" style="width: 150px;">
-                </label>
-                <label class="form-inline">
-                    <span>状态：</span>
-                    <input type="radio" class="" name="search-radio-status" value="0">启用
-                    <input type="radio" class="" name="search-radio-status" value="1">停用
-                </label>
-            </div>
+            <form>
+                <div class="select-input">
+                    <label class="form-inline">
+                        <span>账户：</span>
+                        <input id="search-input-account" type="text" class="form-control" style="width: 150px;">
+                    </label>
+                    <label class="form-inline">
+                        <span>状态：</span>
+                        <select class="form-control" id="search-select-status" style="width: 150px;">
+                            <option value="">全部</option>
+                            <option value="1">启用</option>
+                            <option value="0">停用</option>
+                        </select>
+                    </label>
+                </div>
 
-            <div class="select-btn">
-                <button class="btn btn-primary btn-open" onclick="selectUser()">查询</button>
-            </div>
+                <div class="select-btn">
+                    <input type="button" class="btn btn-primary " value="查询" onclick="selectUser()"/>
+                    <input type="reset" class="btn" value="重置"/>
+                </div>
+            </form>
         </div>
 
         <!--操作按钮-->
         <hr>
         <div class="btn-section">
-            <button class="btn btn-primary btn-open" data-target="#my-modal" data-toggle="modal" onclick="addUserModal()">创建</button>
-            <button class="btn btn-primary btn-open"  onclick="updateUserModal()">修改</button>
-            <button class="btn btn-primary btn-open" onclick="deleteUser()">删除</button>
+            <button class="btn btn-primary" onclick="addUserModal()">创建</button>
+            <button class="btn btn-success" onclick="updateUserModal()">修改</button>
+            <button class="btn btn-danger" onclick="deleteUser()">删除</button>
         </div>
         <div class="table-section">
             <table id="user-table"></table>
@@ -72,7 +78,8 @@
                             <!--requred 必填样式（红色星号）-->
                             <label for="modal-input-account" class="col-sm-2 control-label required">登录账户 </label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control need-check not-null" maxlength="10" regex="account"
+                                <input type="text" class="form-control need-check not-null" maxlength="10"
+                                       regex="account"
                                        id="modal-input-account" placeholder="请输入登录账户">
                                 <!--并且必须在表单项紧挨着的下方添加如下标签-->
                                 <span class="alert-warn"></span>
@@ -82,31 +89,32 @@
                             <!--requred 必填样式（红色星号）-->
                             <label for="modal-input-password" class="col-sm-2 control-label required">密码 </label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control need-check not-null" maxlength="10" regex="account"
+                                <input type="text" class="form-control need-check not-null" maxlength="10"
+                                       regex="account"
                                        id="modal-input-password" placeholder="请输入密码">
                                 <!--并且必须在表单项紧挨着的下方添加如下标签-->
                                 <span class="alert-warn"></span>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">性别 </label>
+                            <label class="col-sm-2 control-label required">状态 </label>
                             <div class="col-sm-10">
                                 <div class="radio">
                                     <label class="radio-inline">
-                                        <input type="radio" class="" name="modal-radio-status" value="0">启用
+                                        <input type="radio" class="need-check not-null" name="modal-radio-status" value="1">启用
                                     </label>
                                     <label class="radio-inline">
-                                        <input type="radio" class="" name="modal-radio-status" value="1">停用
+                                        <input type="radio" class="need-check not-null" name="modal-radio-status" value="0">停用
                                     </label>
                                 </div>
                                 <span class="alert-warn"></span>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label ">身份 </label>
+                            <label class="col-sm-2 control-label required">身份 </label>
                             <div class="col-sm-10">
-                                <select id="modal-select-role" class="form-control ">
-                                    <option value="-1">请选择</option>
+                                <select id="modal-select-role" class="form-control need-check not-null">
+                                    <option value="">请选择</option>
                                     <option value="0">考生</option>
                                     <option value="1">管理员</option>
                                     <option value="2">招生者</option>
