--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -52,7 +52,7 @@
                             </div>
 
                             <div class="button-login text-center" style="margin-top: 40px;">
-                                <button type="button" id="login-button-examineelogin" class="btn btn-primary" style="width: 100px;">登录</button>
+                                <button type="button" id="login-button-adminlogin" class="btn btn-primary" style="width: 100px;">登录</button>
                             </div>
                             <div class="clearfix"></div>
                         </fieldset>
@@ -171,7 +171,12 @@
 
     <!--**************JS部分************-->
     <script src="../../lib/js/jquery.min.js"></script>
+    <script src="../../../config/config.js"></script>
     <script src="../../lib/bootstrap/js/bootstrap.min.js"></script>
-<script src="../../js/login/login.js"></script>
+    <script src="../../lib/bootstrap-table/bootstrap-table.min.js"></script>
+    <script src="../../lib/bootstrap-table/bootstrap-table-zh-CN.min.js"></script>
+    <script src="../../utils/common-util.js"></script>
+    <script src="../../utils/const-manager.js"></script>
+    <script src="../../js/login/login.js"></script>
 </body>
 </html>
